- Fine tuned About section  - Started Experience section

--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
     "vite": "^6.2.0",
     "vite-plugin-static-copy": "^2.3.0"
   },
-  "homepage": "https://dahbonedokkta.github.io/my-react-portfolio"
+  "homepage": "https://DahBoneDokkta.github.io/my-react-portfolio"
 }
